# timeseries-hybrid-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/: plan.md
.specify/specs/001-hybrid-rag-system/: spec.md  tasks.md
docker/: Dockerfile  docker-compose.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: demo.py  live_test.py  seed_data.py  setup_db.py
src/: __init__.py  main.py
src/agents/: base.py
src/agents/extractor/: __init__.py  agent.py
src/agents/reasoner/: __init__.py  agent.py
src/agents/retriever/: __init__.py  agent.py
src/agents/validator/: __init__.py  agent.py
src/api/: dependencies.py
src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api/routes/: __init__.py  graph.py  health.py  metrics.py  query.py  sessions.py
src/api/websocket/: __init__.py  handlers.py
src/config/: __init__.py  constants.py  settings.py
src/data/models/: entities.py  schemas.py
src/data/repositories/: demo.py  graph.py  session.py  timeseries.py  vector.py
src/llm/: __init__.py  client.py  embeddings.py
src/llm/prompts/: __init__.py  planner.py  reasoner.py  retriever.py  validator.py
src/orchestration/: __init__.py  coordinator.py  planner.py  session_manager.py
src/reasoning/: __init__.py
src/reasoning/cot/: __init__.py  processor.py
src/reasoning/graphrag/: __init__.py  engine.py
src/reasoning/selfrag/: __init__.py  tokens.py  verifier.py
src/static/: index.html
src/utils/: logging.py  metrics.py
tests/: conftest.py
tests/contract/: __init__.py  test_api_spec.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+22 files in other folders)
