[tool.poetry]
name = "hybrid-rag-system"
version = "0.1.0"
description = "GraphRAG + Self-RAG + Multi-Agent 하이브리드 추론 강화 RAG 시스템"
authors = ["AI Development Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
anthropic = "^0.45.0"
openai = "^1.12.0"
neo4j = "^5.17.0"
influxdb-client = "^1.40.0"
pymilvus = "^2.4.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
aiosqlite = "^0.20.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
tenacity = "^8.2.3"
structlog = "^24.1.0"
jinja2 = "^3.1.3"
numpy = "^1.26.0"
networkx = "^3.2.0"
cdlib = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.0"
pylint = "^3.0.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
aioresponses = "^0.7.6"
factory-boy = "^3.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
